--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
-prophet==1.1.4
-pandas==2.0.3
-numpy==1.24.3
-matplotlib==3.7.2
-seaborn==0.12.2
-scikit-learn==1.3.0
+prophet>=1.1.0
+pandas>=1.3.0
+numpy>=1.21.0
+matplotlib>=3.4.0
+seaborn>=0.11.0
+scikit-learn>=1.0.0
 plotly==5.15.0
-jupyter==1.0.0 
+jupyter==1.0.0
+lightgbm>=4.0.0
+xgboost>=1.5.0
+tensorflow>=2.8.0
+keras==2.15.0
+joblib==1.3.2 
